python/tests/unit/test_envoy_v3/unsaferegexmapping/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "DevPortal": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"unsaferegexmapping\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-unsaferegexmapping\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"unsaferegexmapping\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\":{\"action\":\"Route\"}},\ [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:05Z",
                    "generation": 2,
                    "labels": {
                        "kat-ambassador-id": "unsaferegexmapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-unsaferegexmapping",
                    "namespace": "default",
                    "resourceVersion": "8494",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/cleartext-host-unsaferegexmapping",
                    "uid": "86610ac7-7f45-48de-aade-5062b21484ab"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "unsaferegexmapping"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "unsaferegexmapping"
                        }
                    },
                    "tlsSecret": {}
                },
                "status": {
                    "state": "Ready",
                    "tlsCertificateSource": "None"
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdmanualcontext-manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secr [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:40Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdmanualcontext-manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "2949",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/hostcrdmanualcontext-manual-host-context",
                    "uid": "fa19bc5d-236f-46f9-b1f1-0c10c8b2ed3f"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdmanualcontext-manual-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdseparatetlscontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdseparatetlscontext-separate-tls-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdseparatetlscontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"hostcrdseparat [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:41Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdseparatetlscontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdseparatetlscontext-separate-tls-context",
                    "namespace": "default",
                    "resourceVersion": "2995",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/hostcrdseparatetlscontext-separate-tls-context",
                    "uid": "e10bdb3b-8605-4f27-8943-5767c5e99f8b"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdseparatetlscontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdseparatetlscontext-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlsinheritfrommodule\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlsinheritfrommodule\",\"namespace\":\"default\"},\"spec\":{\"alpn_protocols\":\"h2,http/1.1\",\"ambassador_id\":[\"tlsinheritfrommodule\"],\"hosts\":[\"a.domain.com\"],\"secret\":\"tlsinheritfrommodule\"}}\n"
                    },
                    "creationTimestamp": "2020-12-23T17:01:08Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "tlsinheritfrommodule",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlsinheritfrommodule",
                    "namespace": "default",
                    "resourceVersion": "6438",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/tlscontexts/tlsinheritfrommodule",
                    "uid": "d4f4da8f-82b8-4c31-b484-3effd73b669f"
                },
                "spec": {
                    "alpn_protocols": "h2,http/1.1",
                    "ambassador_id": [
                        "tlsinheritfrommodule"
                    ],
                    "hosts": [
                        "a.domain.com"
                    ],
                    "secret": "tlsinheritfrommodule"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"unsaferegexmapping\",\"scope\":\"AmbassadorTest\"},\"name\":\"unsaferegexmapping-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8084},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8447}],\"selector\":{\"backend\" [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:32Z",
                    "labels": {
                        "kat-ambassador-id": "unsaferegexmapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "unsaferegexmapping-http",
                    "namespace": "default",
                    "resourceVersion": "293978",
                    "selfLink": "/api/v1/namespaces/default/services/unsaferegexmapping-http",
                    "uid": "e9d2eaa0-314c-49d7-9f66-73c45317e195"
                },
                "spec": {
                    "clusterIP": "10.43.31.237",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8084
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8447
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v2\nkind: Mapping\nname: UnsafeRegexMapping\nprefix: /UnsafeRegexMapping/\nprefix_regex: true\nhost: \"[a-zA-Z].*\"\nhost_regex: true\nregex_headers:\n  X-Foo: \"^[a-z].*\"\nservice: http://unsaferegexmapping-http\nambassador_id: unsaferegexmapping\n---\napiVersion: ambassador/v2\nkind: Module\nname: ambassador\nconfig:\n  regex_type: unsafe\nambassador_id: unsaferegexmapping\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v2\\nkind: Mapping\\nname: UnsafeRegexMapping\\nprefix: /UnsafeRegexMapping/\\nprefix_regex: true\\nhost: \\\"[a-zA-Z].*\\\"\\nhost_regex: true\\nregex_headers:\\n  X-Foo: \\\"^[a-z].*\\\"\\nservice: http://unsaferegexmapping-http\\nambassador_id: unsaferegexmapping\\n---\\napiVersion: am [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:31Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "unsaferegexmapping",
                        "scope": "AmbassadorTest"
                    },
                    "name": "unsaferegexmapping",
                    "namespace": "default",
                    "resourceVersion": "293961",
                    "selfLink": "/api/v1/namespaces/default/services/unsaferegexmapping",
                    "uid": "48f0fa4b-39d2-47ec-ac66-4917473cdd05"
                },
                "spec": {
                    "clusterIP": "10.43.211.147",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30134,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32586,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "unsaferegexmapping"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"unsaferegexmapping\",\"scope\":\"AmbassadorTest\",\"service\":\"unsaferegexmapping-admin\"},\"name\":\"unsaferegexmapping-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"unsaferegexmapping-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"unsaferegexmapping\"},\"type\ [...]
                    },
                    "creationTimestamp": "2020-12-23T20:38:32Z",
                    "labels": {
                        "kat-ambassador-id": "unsaferegexmapping",
                        "scope": "AmbassadorTest",
                        "service": "unsaferegexmapping-admin"
                    },
                    "name": "unsaferegexmapping-admin",
                    "namespace": "default",
                    "resourceVersion": "293967",
                    "selfLink": "/api/v1/namespaces/default/services/unsaferegexmapping-admin",
                    "uid": "d903c451-6886-4203-9e19-d01eb39912c7"
                },
                "spec": {
                    "clusterIP": "10.43.182.38",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "unsaferegexmapping-admin",
                            "nodePort": 31340,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "unsaferegexmapping"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
